# dac_example

./: .gitignore  README.md  eda.ipynb  german_credit_profile_report.html  pyproject.toml  statlog_german_credit_metadata.txt
src/: datapipeline.py  mlp.py  mlp_datapipeline.py  model.py
